--- a/style.css
+++ b/style.css
@@ -1,17 +1,78 @@
 body{
 	background-color: #FAFAFA;
+	font-family: 'Droid Sans', sans-serif;
 }
 
 h2{
 	color:#9B9797;
-	font-size: 15px;
-	font-family: sans-serif;	
+	font-size: 45px;
+	font-family: sans-serif;
+	margin: 0px;
+	display: inline;
+	padding-left: 5px;
+}
+
+div.ajax-loading{
+	position: fixed;
+	top: 0;
+	left: 0;
+	height:100%;
+	width:100%;
+	z-index: 9999999;
+	/*background-image: url('../../images/loading-bgr.gif');*/
+	background-color: #e7e7e7;
+	opacity: 0.5;
+	display:none;
+}
+div.ajax-loading {
+	height:100%;
+	width:100%;
+	background-image: url('loading.gif');
+	background-position: center center;
+	background-repeat: no-repeat;
+	/*opacity: 1;
+	filter: alpha(opacity=100); /* ie */
+	/*-moz-opacity: 1; /* mozilla */
+}
+
+#loadingMsg {
+	position: absolute;
+	text-align: center;
+	width: 500px;
+	height: 50px;
+	top: 50%;
+	left: 50%;
+	margin-left: -250px;
+	margin-top: 30px;
+}
+
+#serverURL{
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	margin-left: -150px;
+	top: 30%;
+}
+
+#serURL{
+	width: 300px;
+}
+
+#serverLogo{
+	position:fixed;
+	top: 5px;
+	right: 10px;
+}
+
+#statsContainer{
+	margin-top:50px;
 }
 
 .item { 
 	width: 200px;
 	height:50px;
-	border-bottom: 3px solid #F0F0F0;
+	border-bottom: 3px solid #F4AB77;
 	background-color:#FFF;
  }
 
