--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ div.ajax-loading {
 	margin-top: 30px;
 }
 
-#serverURL{
-	width: 100%;
+#serverLogin{
+	width: 300px;
 	text-align: center;
 	position: absolute;
 	left: 50%;
@@ -57,6 +57,55 @@ div.ajax-loading {
 
 #serURL{
 	width: 300px;
+	height: 25px;
+	padding-left: 5px;
+	font-family: 'Droid Sans', sans-serif;
+	margin-bottom: 5px;
+	border: 1px solid #BDBDBD;
+}
+
+#urlSubmit {
+	padding: 10px;
+	margin-top: 5px;
+	width: 305px;
+	background-color: #E97D32;
+	font-size: 14px;
+	color: white;
+	border: 1px solid transparent;
+	border-radius: 4px;
+}
+
+#username{
+	width: 300px;
+	height: 25px;
+	padding-left: 5px;
+	font-family: 'Droid Sans', sans-serif;
+	margin-bottom: 5px;
+	border: 1px solid #BDBDBD;
+}
+
+#password{
+	width: 300px;
+	height: 25px;
+	padding-left: 5px;
+	font-family: 'Droid Sans', sans-serif;
+	margin-bottom: 5px;
+	border: 1px solid #BDBDBD;
+}
+
+#serURL:hover,#username:hover,#password:hover{
+	border: 1px solid #000;
+}
+
+#login {
+	padding: 10px;
+	margin-top: 5px;
+	width: 305px;
+	background-color: #E97D32;
+	font-size: 14px;
+	color: white;
+	border: 1px solid transparent;
+	border-radius: 4px;
 }
 
 #serverLogo{
@@ -72,7 +121,7 @@ div.ajax-loading {
 .item { 
 	width: 200px;
 	height:50px;
-	border-bottom: 3px solid #F4AB77;
+	border-bottom: 3px solid #E97D32;
 	background-color:#FFF;
  }
 
