--- a/css/slick/slick-theme.less
+++ b/css/slick/slick-theme.less
@@ -2,9 +2,9 @@
 
 // Default Variables
 
-@slick-font-path: "./fonts/";
+@slick-font-path: "../../fonts/";
 @slick-font-family: "slick";
-@slick-loader-path: "./";
+@slick-loader-path: "../../";
 @slick-arrow-color: white;
 @slick-dot-color: black;
 @slick-dot-color-active: @slick-dot-color;
@@ -18,7 +18,7 @@
 
 /* Slider */
 .slick-loading .slick-list{
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    background: #fff url('../../images/ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
@@ -27,8 +27,8 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('./fonts/slick.eot');
-    src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
+    src: url('../../fonts/slick.eot');
+    src: url('../../fonts/slick.eot?#iefix') format('embedded-opentype'), url('../../fonts/slick.woff') format('woff'), url('../../fonts/slick.ttf') format('truetype'), url('../../fonts/slick.svg#slick') format('svg');
 }
 
 /* Arrows */
