--- a/wdc/css/connector.css
+++ b/wdc/css/connector.css
@@ -43,6 +43,11 @@ div.ajax-loading {
 	color: red;
 	font-size: 12px;
 }
+
+.welcome {
+	display: none;
+}
+
 #loadingMsg {
 	position: absolute;
 	text-align: center;
